--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "angular-chart.js": "^1.1.1",
     "apexcharts": "^3.43.0",
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.1",
     "chart.js": "^4.4.0",
     "ng-apexcharts": "^1.8.0",
     "rxjs": "~7.8.0",
